paperless-ngx/app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx-broker
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/part-of: paperless-ngx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        app.kubernetes.io/part-of: paperless-ngx
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
      - name: redis
        image: docker.io/library/redis:8
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redisdata
          mountPath: /data
      volumes:
        - name: redisdata
          persistentVolumeClaim:
            claimName: paperless-ngx-pvc-redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paperless-ngx-mariadb
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mariadb
      app.kubernetes.io/part-of: paperless-ngx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/part-of: paperless-ngx
    spec:
      containers:
      - name: mariadb
        image: docker.io/library/mariadb:11
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: dbdata
          mountPath: /var/lib/mysql
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: paperless-ngx-pvc-mariadb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/part-of: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-ngx
      app.kubernetes.io/part-of: paperless-ngx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless-ngx
        app.kubernetes.io/part-of: paperless-ngx
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
      - name: paperless-ngx
        image: ghcr.io/paperless-ngx/paperless-ngx:3.1.3
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: data
          mountPath: /usr/src/paperless/data
        - name: media
          mountPath: /usr/src/paperless/media
        - name: export
          mountPath: /usr/src/paperless/export
        - name: consume
          mountPath: /usr/src/paperless/consume
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-ngx-pvc-data
        - name: media
          persistentVolumeClaim:
            claimName: paperless-ngx-pvc-media
        - name: consume
          emptyDir:
            sizeLimit: 1Gi
        - name: export
          emptyDir:
            sizeLimit: 1Gi
