paperless-ngx/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-svc-mariadb
spec:
  selector:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: paperless-ngx
  ports:
    - protocol: TCP
      port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-svc-redis
spec:
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: paperless-ngx
  ports:
    - protocol: TCP
      port: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-svc
spec:
  selector:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/part-of: paperless-ngx
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8000
